dashboard/deployment/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-status
  labels:
    app: service-status
spec:
  to:
    kind: Service
    name: service-status
  port:
    targetPort: 5000
  tls:
    termination: edge
  wildcardPolicy: None
